--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
     sdk: flutter
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
-
+  curved_navigation_bar: ^1.0.3
+  http: ^0.13.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
