--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   page_transition: ^2.0.9
   curved_navigation_bar: ^1.0.3
   http: ^0.13.5
+  flutter_spinkit: ^5.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
